--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     background-color: rgb(56, 56, 56);
     width: 300px;
     padding: 10px;
-    border: 1px solid #a71c1c;
+    border: 1px solid #424242;
     border-radius: 5px;
   }
   
